dnl Process this file with autoconf to produce a new configure script
dnl if it has changed. See also the Makefile in $NEMO  how to automate
dnl this.
dnl ---------------------------------------------------------------------------------

AC_MSG_CHECKING([MIRIAD4 config])

AC_INIT(checklist)
dnl AC_CONFIG_HEADER(config.h)

dnl -- checks for programs
dnl -- checks for libraries
dnl -- checks for header files
dnl -- checks for typedefs
dnl -- checks for structures
dnl -- checks for compiler characteristics
dnl -- checks for library functions
dnl -- checks for system services


dnl ---                 sizeof various data types
AC_CHECK_SIZEOF(float)
AC_CHECK_SIZEOF(double)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(long long)


AC_HEADER_STDC
AC_CHECK_FUNCS(strchr memcpy)

dnl AC_PROG_CPP

# Use native cc if present
AC_MSG_CHECKING([for vendor's cc to be used instead of gcc])
AC_CHECK_PROG(CC, cc, cc)

AC_PROG_CC
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_ARG_PROGRAM

AC_ARG_ENABLE(lfs,  [  --enable-lfs            large-file-size], ok=$enableval, ok=yes)
if test "$ok" = "yes"; then
  CFLAGS="$CFLAGS -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE"
  echo "LFS selected, note that some filesystems may not support Large File anyways"
else
  echo "LFS not selected, be aware the largest filesize may be just 2GB"
fi

dnl ---------------------------------------------------------------------
dnl All the MAXDIM related stuff

AC_SUBST(MAXDIM)
AC_SUBST(MAXDIM2)
AC_SUBST(MAXIANT)
AC_SUBST(MAXANT)
AC_SUBST(MAXANT2)
AC_SUBST(MAXBASE)
AC_SUBST(MAXBASE2)
AC_SUBST(MAXCHAN)
AC_SUBST(MAXWIN)
AC_SUBST(MAXWIDE)
AC_SUBST(MAXNAX)
AC_SUBST(MAXBUF)

AC_ARG_WITH(maxdim,  [  --with-maxdim=MAXDIM       1D access to images],
		    with_maxdim=$withval, with_maxdim="65536")
MAXDIM=$with_maxdim

AC_ARG_WITH(maxdim2, [  --with-maxdim2=MAXDIM2     2D access to images],
		    with_maxdim2=$withval, with_maxdim2="8192")
MAXDIM2=$with_maxdim2

AC_ARG_WITH(maxiant, [  --with-maxiant=MAXIANT     MAXIANT],
		    with_maxiant=$withval, with_maxiant="2048")
MAXIANT=$with_maxiant

AC_ARG_WITH(maxant,  [  --with-maxant=MAXANT       1D access to antenna based arrays],
		    with_maxant=$withval, with_maxant="64")
MAXANT=$with_maxant

AC_ARG_WITH(maxant2, [  --with-maxant2=MAXANT2     2D access to antenna based arrays],
		    with_maxant2=$withval, with_maxant2="28")
MAXANT2=$with_maxant2

AC_ARG_WITH(maxbase, [  --with-maxbase=MAXBASE     MAXBASE],
		    with_maxbase=$withval, with_maxbase="500")
MAXBASE=$with_maxbase

AC_ARG_WITH(maxbase2,[  --with-maxbase2=MAXBASE2   MAXBASE2],
		    with_maxbase2=$withval, with_maxbase2="500")
MAXBASE2=$with_maxbase2

AC_ARG_WITH(maxchan, [  --with-maxchan=MAXCHAN     Maximum number of spectral channels],
		    with_maxchan=$withval, with_maxchan="4096")
MAXCHAN=$with_maxchan

AC_ARG_WITH(maxwin,  [  --with-maxwin=MAXWIN       Maximum number of spectral windows (BIMA)],
		    with_maxwin=$withval, with_maxwin="16")
MAXWIN=$with_maxwin

AC_ARG_WITH(maxwide, [  --with-maxwide=MAXWIDE     Maximum number of wideband channels],
		    with_maxwide=$withval, with_maxwide="18")
MAXWIDE=$with_maxwide

AC_ARG_WITH(maxnax,  [  --with-maxnax=MAXNAX       Maximum number of axis in images],
		    with_maxnax=$withval, with_maxnax="7")
MAXNAX=$with_maxnax

AC_ARG_WITH(maxbuf,  [  --with-maxbuf=MAXBUF       Maximum size, in words, of blank common buffer],
		    with_maxbuf=$withval, with_maxbuf="4194304")
MAXBUF=$with_maxbuf


dnl --
dnl 

AC_SUBST(WARNING)
WARNING="Warning: do not edit this file, it has possibly been generated by configure"

dnl ---------------------------------------------------------------------
dnl             Check for basic X windows stuff
AC_PATH_X
AC_PATH_XTRA
XINCS="$X_CFLAGS"
XLIBS="$X_LIBS $X_PRE_LIBS -lXext -lX11 $X_EXTRA_LIBS"
AC_SUBST(XLIBS)
AC_SUBST(XINCS)

AC_CANONICAL_HOST

AC_CHECK_LIB(readline, read_history)

AC_CHECK_LIB(z, inflate)
AC_CHECK_LIB(c, strtoll)
AC_CHECK_LIB(c, strtoull)

AC_SEARCH_LIBS(sin, m)

dnl Checks for header files.

AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h sgtty.h strings.h sys/file.h sys/ioctl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

AC_SYS_LONG_FILE_NAMES
dnl  next one can disable with --disable-largefile
AC_SYS_LARGEFILE

dnl Checks for library functions.
AC_TYPE_GETGROUPS
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_FUNC_MMAP
AC_TYPE_SIGNAL
AC_FUNC_VFORK
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(ftime gethostname gettimeofday getwd mkdir select strdup strtod strtol strtoul dprintf)

AC_C_BIGENDIAN

AC_OUTPUT(mirdefs ../src/inc/maxdim.h ../src/inc/maxdimc.h)


dnl It is beyond me why 'mirdefs' is not kept executable.... like mirdefs.in

chmod +x mirdefs


dnl 'maxdim' report:

echo ""
echo "MAXDIM       : $MAXDIM"
echo "MAXDIM2      : $MAXDIM2"
echo "MAXIANT      : $MAXIANT"
echo "MAXANT       : $MAXANT"
echo "MAXANT2      : $MAXANT2"
dnl echo "MAXBASE      : (MAXANT2*(MAXANT2-1))/2  (hardcoded)"
echo "MAXBASE      : $MAXBASE"
echo "MAXBASE2     : $MAXBASE2"
echo "MAXCHAN      : $MAXCHAN"
echo "MAXWIN       : $MAXWIN"
echo "MAXWIDE      : $MAXWIDE"
echo "MAXNAX       : $MAXNAX"
echo "MAXBUF       : $MAXBUF"

