dnl Process this file with autoconf to produce a new configure script if it has changed.
dnl NOTES:
dnl   - this file should have been called configure.ac
dnl   - deprecate this file (in 4.2.x?) since 4.1.x will introduce configure.ac 
dnl     in $MIR with the new (fully automake based) build system
dnl ------------------------------------------------------------------------------------

dnl AC_MSG_CHECKING([MIRIAD4 config])

AC_INIT(checklist)
dnl AC_CONFIG_HEADER(config.h)

dnl -- checks for programs
dnl -- checks for libraries
dnl -- checks for header files
dnl -- checks for typedefs
dnl -- checks for structures
dnl -- checks for compiler characteristics
dnl -- checks for library functions
dnl -- checks for system services


dnl ---                 sizeof various data types
AC_CHECK_SIZEOF(float)
AC_CHECK_SIZEOF(double)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(long long)


AC_HEADER_STDC
AC_CHECK_FUNCS(strchr memcpy)

dnl AC_PROG_CPP

# Use native cc if present
AC_MSG_CHECKING([for vendor's cc to be used instead of gcc])
AC_CHECK_PROG(CC, cc, cc)

AC_PROG_CC
AC_PROG_CXX
AC_PROG_F77
AC_PROG_CPP
AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_F77_LIBRARY_LDFLAGS

AC_ARG_PROGRAM

_STAR_RESTFP_FIX

AC_ARG_ENABLE(lfs,  [  --enable-lfs            large-file-size], ok=$enableval, ok=yes)
if test "$ok" = "yes"; then
  CFLAGS="$CFLAGS -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE"
  echo "LFS selected, note that some filesystems may not support Large File anyways"
else
  echo "LFS not selected, be aware the largest filesize may be just 2GB"
fi

AC_ARG_ENABLE(i8,  [  --enable-i8             use large-integers, if compiler supported], ok=$enableval, ok=no)
if test "$ok" = "yes"; then 
  integer_size=8
else
  integer_size=4
fi
dnl -- pick your default telescope, in the case statement below some default size
dnl -- parameters are changed for certain telescopes.
AC_ARG_WITH(telescope,  [  --with-telescope=MIRTEL    Default telescope (for maxdim)],
		    with_telescope=$withval, with_telescope="carma")
TELESCOPE=$with_telescope

dnl - reminder: the '2' and '3' versions are to be used in 2-dim and 3-dim arrays with other size parameters
def_maxdim=65536	##
def_maxdim2=8192
def_maxant=64		##
def_maxant2=28
def_maxbase=1058	#
def_maxbase2=1058
def_maxchan=4096	# 
def_maxwin=16		# 
def_maxwide=18		# 
def_maxnax=7
def_maxbuf=10000000     ##

case $TELESCOPE in
     "ata")  echo "Selecting ATA-350 array"
	continue;;
     "atnf")  echo "Selecting ATNF array"
	continue;;
     "bima")  echo "Selecting old BIMA array"
	continue;;
     "carma")  echo "Selecting CARMA array"
	def_maxwin=32
	def_maxwide=32
	def_maxchan=8192
	continue;;
     "lofar")  echo "Selecting LOFAR simulation 2048-array"
        def_maxant=2048
        def_maxbase=2096128
	continue;;
     "fasr") echo "Selecting FASR simulation 128-array"
	def_maxant=128
	def_maxant2=128
        def_maxbase=8128
	continue;;
     "gmrt")  echo "Selecting GMRT array"
	def_maxant=30
	continue;;
     "sma")  echo "Selecting SMA array"
        def_maxdim=4096
	def_maxant=30
	def_maxbase=435
	def_maxchan=12288
	def_maxwin=48
	def_maxwide=50
	continue;;
     "jwst")  echo "Selecting SMA array"     
     	def_maxdim=65536
	def_maxdim2=8192
	def_maxant=512
	def_maxant2=512
	def_maxbase=1024
	def_maxbase2=1024
	def_maxchan=128
	def_maxwin=8
	def_maxwide=8
	continue;;
     "test")  echo "Selecting small TEST array"
        def_maxdim=1024
	def_maxdim2=1024
	def_maxant=9
	def_maxbase=36
	def_maxbase2=36
	def_maxchan=1024
	def_maxwin=16
	def_maxwide=18
	continue;;
     "wsrt")  echo "Selecting WSRT array"
	continue;;
     "apertif")  echo "Selecting APERTIF array"     
     	def_maxdim=65536
	def_maxdim2=8192
	def_maxant=12
	def_maxant2=12
	def_maxbase=66
	def_maxbase2=66
	def_maxchan=16384
	def_maxwin=8
	def_maxwide=8
	continue;;
     *) echo "Not a valid array"
esac

echo "DEBUG: def_maxdim=$def_maxdim"

dnl ---------------------------------------------------------------------
dnl All the MAXDIM related stuff

AC_SUBST(TELESCOPE)
AC_SUBST(MAXDIM)
AC_SUBST(MAXDIM2)
AC_SUBST(MAXANT)
AC_SUBST(MAXANT2)
AC_SUBST(MAXBASE)
AC_SUBST(MAXBASE2)
AC_SUBST(MAXCHAN)
AC_SUBST(MAXWIN)
AC_SUBST(MAXWIDE)
AC_SUBST(MAXNAX)
AC_SUBST(MAXBUF)

AC_ARG_WITH(maxdim,  [  --with-maxdim=MAXDIM       1D access to images],
		    with_maxdim=$withval, with_maxdim="$def_maxdim")
MAXDIM=$with_maxdim

AC_ARG_WITH(maxdim2, [  --with-maxdim2=MAXDIM2     2D access to images],
		    with_maxdim2=$withval, with_maxdim2="$def_maxdim2")
MAXDIM2=$with_maxdim2

AC_ARG_WITH(maxant,  [  --with-maxant=MAXANT       1D access to antenna based arrays],
		    with_maxant=$withval, with_maxant="$def_maxant")
MAXANT=$with_maxant

AC_ARG_WITH(maxant2, [  --with-maxant2=MAXANT2     2D access to antenna based arrays],
		    with_maxant2=$withval, with_maxant2="$def_maxant2")
MAXANT2=$with_maxant2

AC_ARG_WITH(maxbase, [  --with-maxbase=MAXBASE     MAXBASE],
		    with_maxbase=$withval, with_maxbase="$def_maxbase")
MAXBASE=$with_maxbase

AC_ARG_WITH(maxbase2,[  --with-maxbase2=MAXBASE2   MAXBASE2],
		    with_maxbase2=$withval, with_maxbase2="$def_maxbase2")
MAXBASE2=$with_maxbase2

AC_ARG_WITH(maxchan, [  --with-maxchan=MAXCHAN     Maximum number of spectral channels],
		    with_maxchan=$withval, with_maxchan="$def_maxchan")
MAXCHAN=$with_maxchan

AC_ARG_WITH(maxwin,  [  --with-maxwin=MAXWIN       Maximum number of spectral windows (BIMA)],
		    with_maxwin=$withval, with_maxwin="$def_maxwin")
MAXWIN=$with_maxwin

AC_ARG_WITH(maxwide, [  --with-maxwide=MAXWIDE     Maximum number of wideband channels],
		    with_maxwide=$withval, with_maxwide="$def_maxwide")
MAXWIDE=$with_maxwide

AC_ARG_WITH(maxnax,  [  --with-maxnax=MAXNAX       Maximum number of axis in images],
		    with_maxnax=$withval, with_maxnax="$def_maxnax")
MAXNAX=$with_maxnax

AC_ARG_WITH(maxbuf,  [  --with-maxbuf=MAXBUF       Maximum size, in words, of blank common buffer],
		    with_maxbuf=$withval, with_maxbuf="$def_maxbuf")
MAXBUF=$with_maxbuf


dnl --
dnl 

AC_CANONICAL_HOST

AC_SUBST(WARNING)
WARNING="Warning: do not edit this file, it has possibly been generated by configure"

AC_SUBST(SLIB)
case $host_os in
  linux*|Linux*)
    SLIB=linux
    ;;
  darwin*)
    SLIB=mac
    ;;
  sol*)
    SLIB=linux
    ;;
  *)
    SLIB=none
    ;;
esac

dnl ---------------------------------------------------------------------
dnl             Check for basic X windows stuff
AC_PATH_X
AC_PATH_XTRA
XINCS="$X_CFLAGS"
XLIBS="$X_LIBS $X_PRE_LIBS -lXext -lX11 $X_EXTRA_LIBS"
AC_SUBST(XLIBS)
AC_SUBST(XINCS)

AC_CHECK_LIB(readline, read_history)

AC_CHECK_LIB(z, inflate)
AC_CHECK_LIB(c, strtoll)
AC_CHECK_LIB(c, strtoull)

AC_SEARCH_LIBS(sin, m)

dnl Checks for header files.

AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h sgtty.h strings.h sys/file.h sys/ioctl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_C_BIGENDIAN 
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

AC_SYS_LONG_FILE_NAMES
dnl  next one can disable with --disable-largefile
AC_SYS_LARGEFILE

dnl Checks for library functions.
AC_TYPE_GETGROUPS
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_FUNC_MMAP
AC_TYPE_SIGNAL
AC_FUNC_VFORK
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(ftime gethostname gettimeofday getwd mkdir select strdup strtod strtol strtoul dprintf)

AC_C_BIGENDIAN

AC_OUTPUT(mirdefs ../src/inc/maxdim.h ../src/inc/maxdimc.h Makefile compile.generic)


dnl It is beyond me why 'mirdefs' is not kept executable.... like mirdefs.in

chmod +x mirdefs


dnl 'maxdim' report:

echo ""
echo "TELESCOPE    : $TELESCOPE"
echo ""
echo "MAXDIM       : $MAXDIM"
echo "MAXDIM2      : $MAXDIM2"
echo "MAXANT       : $MAXANT"
echo "MAXANT2      : $MAXANT2"
dnl echo "MAXBASE      : (MAXANT2*(MAXANT2-1))/2  (hardcoded)"
echo "MAXBASE      : $MAXBASE"
echo "MAXBASE2     : $MAXBASE2"
echo "MAXCHAN      : $MAXCHAN"
echo "MAXWIN       : $MAXWIN"
echo "MAXWIDE      : $MAXWIDE"
echo "MAXNAX       : $MAXNAX"
echo "MAXBUF       : $MAXBUF"

