SUBDIRS = atnf-prog #atnf-user carma

EXTRA_DIST = README

# Skipped the following subdirs. Descriptions taken from README in
# this directory
#
# covers		old covers
# linpack		linpack manual
#
# pguide		old BIMA programmers guide (kept for historics)
# eguide		old BIMA executables guide (kept for historics)
# sguide		old BIMA subroutine guide (kept for historics)
# uguide		old BIMA users guide (kept for historics)
#
# gildas		interoperability notes gildas<->miriad
