## Uninstalled convenience library of linpack routines, linked into
## libmir.la.

noinst_LTLIBRARIES = \
  libmir_linpack.la

libmir_linpack_la_LDFLAGS = -dynamic
 
libmir_linpack_la_SOURCES = \
  caxpy.f cchdc.f cchdd.f cchex.f cchud.f ccopy.f cdotc.f cdotu.f cgbco.f \
  cgbdi.f cgbfa.f cgbsl.f cgeco.f cgedi.f cgefa.f cgesl.f cgtsl.f chico.f \
  chidi.f chifa.f chisl.f chpco.f chpdi.f chpfa.f chpsl.f cmach.f cpbco.f \
  cpbdi.f cpbfa.f cpbsl.f cpoco.f cpodi.f cpofa.f cposl.f cppco.f cppdi.f \
  cppfa.f cppsl.f cptsl.f cqrdc.f cqrsl.f crotg.f cscal.f csico.f csidi.f \
  csifa.f csisl.f cspco.f cspdi.f cspfa.f cspsl.f csrot.f csscal.f csvdc.f \
  cswap.f ctrco.f ctrdi.f ctrsl.f icamax.f isamax.f sasum.f saxpy.f \
  scasum.f schdc.f schdd.f schex.f schud.f scnrm2.f scopy.f sdot.f sgbco.f \
  sgbdi.f sgbfa.f sgbsl.f sgeco.f sgedi.f sgefa.f sgesl.f sgtsl.f smach.f \
  snrm2.f spbco.f spbdi.f spbfa.f spbsl.f spoco.f spodi.f spofa.f sposl.f \
  sppco.f sppdi.f sppfa.f sppsl.f sptsl.f sqrdc.f sqrsl.f srot.f srotg.f \
  sscal.f ssico.f ssidi.f ssifa.f ssisl.f sspco.f sspdi.f sspfa.f sspsl.f \
  ssvdc.f sswap.f strco.f strdi.f strsl.f 
